[package]
name = "rtrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
glam = "0.24.1"
image = "0.24.6"
indicatif = {version = "0.17.5", features = ["rayon"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.7.0"
